# Terplebots

./: .gitignore  README.txt
src/terple/decentralized_planning/: Reciprocal_Nbody_Collision_Avoidance.pdf.xopp
src/terple_management/: CMakeLists.txt  package.xml
src/terple_management/nodes/: DecentralizedProgramOrchestrator.py  DecentralizedSensingSimulator.py  Manager_C.py  Visualizer_C.py
src/terple_management/scripts/: obstacles.py
src/terple_msgs/: CMakeLists.txt  package.xml
src/terple_msgs/msg/: AllPaths.msg  BacktrackNode.msg  DecentralizedCombinedPaths.msg  DecentralizedPath.msg  DecentralizedProgram.msg  DecentralizedRobotReadings.msg  DecentralizedRobotStatus.msg  MoveCommand.msg  NeighborsPose2D.msg  Path.msg  PlanRequest.msg  RobotExternalCharacteristics.msg
src/terple_planning/: CMakeLists.txt  package.xml
src/terple_planning/nodes/: DecentralizedRobotPlanner.py  PlanRequester_C.py  Planner_C.py  Visualizer_C.py
src/terple_planning/scripts/: TestDecentralizedRoutine.py  cost.py  obstacles.py
src/terple_sim/: CMakeLists.txt  package.xml
src/terple_sim/launch/: decentralized.launch  main.launch  spawn_terplebot.launch
src/terple_sim/nodes/: DecentralizedVisualizer.py
