<?xml version="1.0"?>
<package format="2">
  <name>terple_management</name>
  <version>0.0.0</version>
  <description>The terple_management package</description>
  <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>rospy</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>gazebo_msgs</build_depend>
<build_depend>terple_msgs</build_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>gazebo_msgs</build_export_depend>
<build_export_depend>nhr_msgs</build_export_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>gazebo_msgs</exec_depend>
<exec_depend>terple_msgs</exec_depend>
</package>
