<?xml version="1.0"?>
<package format="2">
  <name>terple_planning</name>
  <version>0.0.0</version>
  <description>The terple_planning package</description>
  <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
